k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campuscare-backend-service
  namespace: campuscare
  labels:
    app.kubernetes.io/name: campuscare
    app.kubernetes.io/component: backend-service
    app.kubernetes.io/part-of: campuscare
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http-api
  selector:
    app: campuscare-backend
