k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campuscare-frontend-service
  namespace: campuscare
  labels:
    app.kubernetes.io/name: campuscare
    app.kubernetes.io/component: frontend-service
    app.kubernetes.io/part-of: campuscare
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: campuscare-frontend
