k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campuscare-mongodb-service
  namespace: campuscare
  labels:
    app.kubernetes.io/name: campuscare
    app.kubernetes.io/component: database-service
    app.kubernetes.io/part-of: campuscare
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongodb
  selector:
    app: campuscare-mongodb
